# Claude_to_OpenAI

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
app/: client.py  config.py  entrypoint.py  errors.py  main.py  streaming.py  translate.py
config/: config.example.json
scripts/: compat_check.py  package_release.py
tests/: conftest.py  test_compat_check.py  test_config.py  test_entrypoint.py  test_errors.py  test_live_image_description.py  test_messages_nonstream.py  test_messages_stream.py  test_models.py  test_package_release.py  test_startup_validation.py  test_translate.py
