[project]
name = "openai-to-claude-proxy"
version = "0.1.0"
description = "Claude Code-compatible proxy from Anthropic Messages API to OpenAI-compatible upstreams"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "fastapi",
    "uvicorn",
    "openai",
    "python-dotenv",
    "httpx",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pyinstaller",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
